# aoc_2024

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
