[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "day_1"
path = "src/bin/day_1/day_1.rs"

[[bin]]
name = "day_2"
path = "src/bin/day_2/day_2.rs"

[[bin]]
name = "day_3"
path = "src/bin/day_3/day_3.rs"

[[bin]]
name = "day_4"
path = "src/bin/day_4/day_4.rs"
